== Version 2.6.5 Work in progress (not released -- this is a draft) ==

  Users side :
  ------------
    # Apps :
        * Emails :
            - The email form uses HTML line breaks when the HTML body is copied
              from the plain text body.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The custom field brick displayed inner-edition buttons even when it was disabled.
        # The templatetag {% widget_icon instance=... %} did not use "label" argument.


== Version 2.6.4 ==

  Users side :
  ------------
    # The render of custom menu icons has been fixed for non-square images.
    # In mass-import form, the selector for properties was not our expected widget.
    # In menu entries with custom URLs, links are now opened in a new tab.
    # Some escaping issues have been fixed.
    # Apps :
        * Opportunities :
            - In the blocks for related Invoices, Quotes & Sales Orders :
                - The color of the statuses were not displayed.
                - The multi-inner-edition have been added.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The method 'CremeUser.has_perm()' works now correctly for link permission on models.
        # Javascript :
            - Dialog :
                - An option 'propagateEvent' has been added :
                    - When enabled, a copy of the event prefixed by 'dialog-' is triggered to allow the usage of external handlers
                      (the dialog element if opened or the window.document).
                      It can be used with the new id option to listen a specific popup.
                      e.g: $(document).on('dialog-open', '#my-popup', function() { ... });
                - An option 'id' has been added to identify the dialog DOM element.
                - The methods 'fitToFrameSize()' & 'resize()' has been added to the widget 'ui.dialog'.